# vacationExtender

./: CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml
src/vacationextender/: core.py  main.py  mycalendar.py
test/: config.toml
