[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vacation-extender"
version = "0.1.1"
description = "Maximize time off by smart linking public holidays and weekends."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "André de Freitas Smaira", email = "andre.smaira@gmail.com" },
]
keywords = ["vacation", "holiday", "planner", "timeoff", "optimization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "holidays",
    "toml",
    "streamlit"
]

[project.urls]
"Homepage" = "https://github.com/afsmaira/vacationExtender"
"Bug Tracker" = "https://github.com/afsmaira/vacationExtender/issues"

[project.scripts]
vacationext = "vacationextender.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vacationextender"]